objects/Order.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Formula: Value of the AccountId field.</description>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncJobId__c</fullName>
        <description>This stores asynchronous job Id if any jobs running on this order.</description>
        <inlineHelpText>This stores asynchronous job Id if any jobs running on this order.</inlineHelpText>
        <label>Async Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name for which this order is locked.</description>
        <inlineHelpText>This stores the asynchronous operation name for which this order is locked.</inlineHelpText>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>BulkRequest</fullName>
                    <label>Bulk Request</label>
                </value>
                <value>
                    <fullName>BulkSplit</fullName>
                    <label>Bulk Split</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingName__c</fullName>
        <description>Text to enter billing contact</description>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartContextValues__c</fullName>
        <description>The field is used to store context value of the order.</description>
        <label>Cart Context Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Cart Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreatedByAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreditCheckDecision__c</fullName>
        <description>Stores the result of the credit check.</description>
        <label>Credit Check Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Accepted-Reference</fullName>
                </value>
                <value>
                    <fullName>Accept-Deposit</fullName>
                </value>
                <value>
                    <fullName>Accepted-Upsell</fullName>
                </value>
                <value>
                    <fullName>Accepted-Downsale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerOriginatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact on the order’s account who originated the order</description>
        <label>Customer Originated By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultBillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Account Orders</relationshipLabel>
        <relationshipName>BillingAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Premises associated with this order</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Premises Orders</relationshipLabel>
        <relationshipName>PremisesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Account associated with this Order</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Account Orders</relationshipLabel>
        <relationshipName>ServiceAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Point associated with this order</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Service Point Orders</relationshipLabel>
        <relationshipName>ServicePointOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeliveryMethod__c</fullName>
        <description>Identifies the method of delivery for the order.</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Store</fullName>
                    <default>true</default>
                    <label>In Store</label>
                </value>
                <value>
                    <fullName>Store Pickup</fullName>
                </value>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>Premium Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Delivery_Installation_Status__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Discount__c</fullName>
        <description>Manual discount for entire order</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseOneTimeCharge__c</fullName>
        <description>Roll up of the one-time charges of the order items before applying adjustments.</description>
        <label>Effective Total: Base One Time Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseRecurringCharge__c</fullName>
        <description>Roll up of the recurring charges of the order items before applying adjustments.</description>
        <label>Effective Total: Base Recurring Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOrderTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Total: Monthly Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
        <description>Effective Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsagePriceTotal__c</fullName>
        <description>Effective Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnterpriseOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enterprise order from which master order is created</description>
        <label>Enterprise Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Enterprise Order</relationshipLabel>
        <relationshipName>EnterpriseOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalPricingStatus__c</fullName>
        <description>This field is to keep track of external pricing status.</description>
        <label>External Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                    <default>true</default>
                    <label>Not Ready</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Request Confirmed</fullName>
                </value>
                <value>
                    <fullName>Invalidated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstSubmitAttemptTs__c</fullName>
        <description>Date of First Submission to Order Management</description>
        <inlineHelpText>Date of First Submission to Order Management</inlineHelpText>
        <label>First Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstVersionOrderIdentifier__c</fullName>
        <label>Original Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ForceSupplementals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an internal flag used to accept Order changes post PONR</description>
        <label>Force Supplementals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this order</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <description>The summary fulfilment status of this order. Populated and updated by order management processes for submitted orders.</description>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveOrderVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the current order is the one that is active in Order Management System.</description>
        <label>Active Order Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changes Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAllowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Changes Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if order requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPriced__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__LastPricedAt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSyncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsValidated__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__ValidationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyIntervalUnit__c</fullName>
        <defaultValue>&quot;Seconds&quot;</defaultValue>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardyStatus__c</fullName>
        <formula>IF(
                ISBLANK(vlocity_cmt__RequestedCompletionDate__c) || ISNULL(vlocity_cmt__RequestedCompletionDate__c) || ISBLANK(vlocity_cmt__DueDate__c) || ISNULL(vlocity_cmt__DueDate__c),
                    &apos;Green&apos;,
                    IF(
                        vlocity_cmt__DueDate__c &gt;= vlocity_cmt__RequestedCompletionDate__c,
                            &apos;Red&apos;,
                            IF(
                                vlocity_cmt__JeopardySafetyInterval__c &lt;= 0,
                                &apos;Green&apos;,
                                CASE(vlocity_cmt__JeopardySafetyIntervalUnit__c,
                                    &apos;Seconds&apos;, IF(vlocity_cmt__DueDate__c + (vlocity_cmt__JeopardySafetyInterval__c/(24*60*60)) &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    &apos;Calendar Hours&apos;, IF(vlocity_cmt__DueDate__c + (vlocity_cmt__JeopardySafetyInterval__c/24) &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    &apos;Calendar Days&apos;, IF(vlocity_cmt__DueDate__c + vlocity_cmt__JeopardySafetyInterval__c &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    /* TODO: Gap - business intervals doesn&apos;t support business calendar */
                                    &apos;Business Hours&apos;, IF(vlocity_cmt__DueDate__c + (vlocity_cmt__JeopardySafetyInterval__c/24) &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    &apos;Business Days&apos;, IF(vlocity_cmt__DueDate__c + vlocity_cmt__JeopardySafetyInterval__c &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                &apos;Green&apos;)
                            )
                    )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jeopardy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPricedAt__c</fullName>
        <label>Last Priced At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if an order is locked by a user.</description>
        <inlineHelpText>This indicates if an order is locked by a user.</inlineHelpText>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on the order.</description>
        <inlineHelpText>This stores the reason for doing lock on the order.</inlineHelpText>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MasterOrderName__c</fullName>
        <description>The name of a master order under which multi-site orders are managed.</description>
        <label>Master Order Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxCatalogueDeltaObjectIndex__c</fullName>
        <description>Maximum Sync Delta Object Index / Name. Populated by order management during order submit in case if catalog is out of sync with OMplus.</description>
        <label>Maximum Catalog Delta Object Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MultiServiceMessageData__c</fullName>
        <description>This field stores messages that are generated and displayed in a MultiService feature.</description>
        <label>Multi Service Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Notes__c</fullName>
        <description>Captures additional comments about the order.</description>
        <label>Order Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number of Contract Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMarginTotal__c</fullName>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of one time totals of orders for which this order is a parent order.</description>
        <label>Parent Order One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the standard OpportunityId field.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationMethod__c</fullName>
        <description>The orchestration method used for Order Management decomposition and orchestration</description>
        <label>Orchestration Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Order Management Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_cmt__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanReferenceId__c</fullName>
        <label>Orchestration Plan Reference Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this order is linked</description>
        <label>Order Group</label>
        <referenceTo>vlocity_cmt__OrderGroup__c</referenceTo>
        <relationshipLabel>Group Orders</relationshipLabel>
        <relationshipName>GroupOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderGroup__c</fullName>
        <label>Order Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderMarginTotal__c</fullName>
        <label>Order Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderStatus__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Submit</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancel Requested</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Amend Requested</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Available In Pool</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__RecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                    <default>true</default>
                    <label>Call Center</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the contact who has initiated the order.</description>
        <label>Originating Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Orders</relationshipLabel>
        <relationshipName>ContactOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this order was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates if this has parent order. Parent order here also refers to a master order.</description>
        <label>Parent Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Orders Using This Price List</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Pricebook__c</fullName>
        <formula>Pricebook2.Name</formula>
        <label>Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessingLog__c</fullName>
        <description>Order processing log. Populated by order management during order submit.</description>
        <label>Processing Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>